# libconfig

./: CMakeLists.txt  Makefile.in  aclocal.m4  configure
doc/: Makefile.in
examples/: Makefile.in
examples/c/: Makefile.in
examples/c++/: Makefile.in
lib/: CMakeLists.txt  Makefile.in  libconfig.c  libconfig.h++  libconfigcpp.c++
tests/: CMakeLists.txt  Makefile.in
tinytest/: CMakeLists.txt  Makefile.in
